# sdl3-sample

./: .gitignore  CMakeLists.txt
.github/workflows/: android-build.yml  build.yml  linux-build.yml  mac-build.yml  web-build.yml  windows-build.yml
assets/: info.json
include/: game.h  main.h
include/patterns/singleton/: singleton.h
resources/: SGE.desktop.in  appicon.rc  index.html  manifest.json  script.js  style.css
src/: game.cpp  main.cpp
